# bindgen-testing

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
c_lib/: analytics.c  analytics.h  calculator.h  common_types.h  wrapper.h
include/: main.cpp
rust_lib/: Cargo.toml  build.rs  cbindgen.toml
rust_lib/src/: ffi.rs  lib.rs
src/: main.rs  safe_wrapper.rs
